--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">8 methods,   8 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,32 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyEmploymentStatus" class="method navigator-link" hash-for-method="verifyAddEmploymentStatus(Test Employment Status 06)">verifyAddEmploymentStatus(Test Employment Status 06)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyEmploymentStatus" class="method navigator-link" hash-for-method="verifyAddEmploymentStatus(Test Employment Status 01)">verifyAddEmploymentStatus(Test Employment Status 01)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyEmploymentStatus" class="method navigator-link" hash-for-method="verifyAddEmploymentStatus(Test Employment Status 03)">verifyAddEmploymentStatus(Test Employment Status 03)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyEmploymentStatus" class="method navigator-link" hash-for-method="verifyAddEmploymentStatus(Test Employment Status 04)">verifyAddEmploymentStatus(Test Employment Status 04)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyEmploymentStatus" class="method navigator-link" hash-for-method="verifyAddEmploymentStatus(Test Employment Status 05)">verifyAddEmploymentStatus(Test Employment Status 05)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyEmploymentStatus" class="method navigator-link" hash-for-method="verifyAddEmploymentStatus(Test Employment Status 02)">verifyAddEmploymentStatus(Test Employment Status 02)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyJobCategories" class="method navigator-link" hash-for-method="test">test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -157,55 +132,14 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.maven.testng.VerifyEmploymentStatus</span>
+              <span class="class-name">com.maven.testng.VerifyJobCategories</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyAddEmploymentStatus(Test Employment Status 06)">
-                  </a> <!-- verifyAddEmploymentStatus(Test Employment Status 06) -->
-                  <span class="method-name">verifyAddEmploymentStatus</span>
-                  <span class="parameters">(Test Employment Status 06)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddEmploymentStatus(Test Employment Status 01)">
-                  </a> <!-- verifyAddEmploymentStatus(Test Employment Status 01) -->
-                  <span class="method-name">verifyAddEmploymentStatus</span>
-                  <span class="parameters">(Test Employment Status 01)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddEmploymentStatus(Test Employment Status 03)">
-                  </a> <!-- verifyAddEmploymentStatus(Test Employment Status 03) -->
-                  <span class="method-name">verifyAddEmploymentStatus</span>
-                  <span class="parameters">(Test Employment Status 03)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddEmploymentStatus(Test Employment Status 04)">
-                  </a> <!-- verifyAddEmploymentStatus(Test Employment Status 04) -->
-                  <span class="method-name">verifyAddEmploymentStatus</span>
-                  <span class="parameters">(Test Employment Status 04)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddEmploymentStatus(Test Employment Status 05)">
-                  </a> <!-- verifyAddEmploymentStatus(Test Employment Status 05) -->
-                  <span class="method-name">verifyAddEmploymentStatus</span>
-                  <span class="parameters">(Test Employment Status 05)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyAddEmploymentStatus(Test Employment Status 02)">
-                  </a> <!-- verifyAddEmploymentStatus(Test Employment Status 02) -->
-                  <span class="method-name">verifyAddEmploymentStatus</span>
-                  <span class="parameters">(Test Employment Status 02)</span>
+                  <a name="test">
+                  </a> <!-- test -->
+                  <span class="method-name">test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -245,7 +179,7 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.maven.testng.VerifyLoginTest&quot;/&gt;
-      &lt;class name=&quot;com.maven.testng.VerifyEmploymentStatus&quot;/&gt;
+      &lt;class name=&quot;com.maven.testng.VerifyJobCategories&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -285,44 +219,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(8);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLoginWithCorrectCredentials')
 data.setCell(0, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(0, 3, 4756);
+data.setCell(0, 3, 4670);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'verifyLoginErrorMessage')
 data.setCell(1, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(1, 3, 1517);
+data.setCell(1, 3, 1563);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyAddEmploymentStatus')
-data.setCell(2, 2, 'com.maven.testng.VerifyEmploymentStatus')
-data.setCell(2, 3, 1101);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verifyAddEmploymentStatus')
-data.setCell(3, 2, 'com.maven.testng.VerifyEmploymentStatus')
-data.setCell(3, 3, 1093);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'verifyAddEmploymentStatus')
-data.setCell(4, 2, 'com.maven.testng.VerifyEmploymentStatus')
-data.setCell(4, 3, 1086);
-data.setCell(5, 0, 5)
-data.setCell(5, 1, 'verifyAddEmploymentStatus')
-data.setCell(5, 2, 'com.maven.testng.VerifyEmploymentStatus')
-data.setCell(5, 3, 1084);
-data.setCell(6, 0, 6)
-data.setCell(6, 1, 'verifyAddEmploymentStatus')
-data.setCell(6, 2, 'com.maven.testng.VerifyEmploymentStatus')
-data.setCell(6, 3, 1079);
-data.setCell(7, 0, 7)
-data.setCell(7, 1, 'verifyAddEmploymentStatus')
-data.setCell(7, 2, 'com.maven.testng.VerifyEmploymentStatus')
-data.setCell(7, 3, 1065);
+data.setCell(2, 1, 'test')
+data.setCell(2, 2, 'com.maven.testng.VerifyJobCategories')
+data.setCell(2, 3, 1);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 12 seconds</span>
+              <span class="suite-total-time">Total running time: 6 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -355,49 +269,29 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginErrorMessage</span>
-                <span class="method-start">4251 ms</span>
+                <span class="method-start">3501 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithCorrectCredentials</span>
-                <span class="method-start">5771 ms</span>
+                <span class="method-start">5067 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">com.maven.testng.VerifyEmploymentStatus</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.maven.testng.VerifyJobCategories</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">navigate</span>
-                <span class="method-start">10529 ms</span>
+                <span class="method-name">navigateToJobCategories</span>
+                <span class="method-start">9739 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">verifyAddEmploymentStatus(Test Employment Status 01)</span>
-                <span class="method-start">14040 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddEmploymentStatus(Test Employment Status 02)</span>
-                <span class="method-start">15128 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddEmploymentStatus(Test Employment Status 03)</span>
-                <span class="method-start">16222 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddEmploymentStatus(Test Employment Status 04)</span>
-                <span class="method-start">17287 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddEmploymentStatus(Test Employment Status 05)</span>
-                <span class="method-start">18389 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">verifyAddEmploymentStatus(Test Employment Status 06)</span>
-                <span class="method-start">19469 ms</span>
+                <span class="method-name">test</span>
+                <span class="method-start">12353 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">20553 ms</span>
+                <span class="method-start">12355 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
