--- a/test-output/old/Suite/classes.html
+++ b/test-output/old/Suite/classes.html
@@ -30,21 +30,21 @@
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
-<td>com.maven.testng.VerifyEmploymentStatus</td>
+<td>com.maven.testng.VerifyJobCategories</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifyAddEmploymentStatus</td>
+<td>test</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>navigate</td>
+<td>navigateToJobCategories</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
