--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/07/12 16:14:25</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@7d64e326]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1521238608</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/12 16:14:13</td>   <td>-12350</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@7d64e326]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1521238608</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/12 16:14:23</td>   <td>-2617</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyJobCategories.navigateToJobCategories()[pri:0, instance:com.maven.testng.VerifyJobCategories@13f95696]">&gt;&gt;navigateToJobCategories</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1521238608</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/07/12 16:14:25</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobCategories.test()[pri:0, instance:com.maven.testng.VerifyJobCategories@13f95696]">test</td> 
-  <td>main@1521238608</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/12 16:14:17</td>   <td>-8855</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@7d64e326]">verifyLoginErrorMessage</td> 
-  <td>main@1521238608</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/12 16:14:18</td>   <td>-7289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@7d64e326]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@1521238608</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/14 09:27:03</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@13f95696]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@20156341</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/14 09:26:50</td>   <td>-12564</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@13f95696]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@20156341</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/14 09:27:00</td>   <td>-2816</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyWorkShifts.navigateToWorkShifts()[pri:0, instance:com.maven.testng.VerifyWorkShifts@cd1d761]">&gt;&gt;navigateToWorkShifts</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@20156341</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/07/14 09:27:03</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyWorkShifts.test1()[pri:0, instance:com.maven.testng.VerifyWorkShifts@cd1d761]">test1</td> 
+  <td>main@20156341</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/14 09:26:54</td>   <td>-8662</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@13f95696]">verifyLoginErrorMessage</td> 
+  <td>main@20156341</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/14 09:26:55</td>   <td>-7381</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@13f95696]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@20156341</td>   <td></td> </tr>
 </table>
