--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b46fba">  <td>21/07/13 08:44:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobCategories.verifyAddJobCategory(java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobCategories@49c6c24f]">verifyAddJobCategory</td> 
-  <td>main@822087264</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/13 08:44:25</td>   <td>21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobCategories.verifyAddJobCategory(java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobCategories@49c6c24f]">verifyAddJobCategory</td> 
-  <td>main@822087264</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/13 08:44:25</td>   <td>25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobCategories.verifyAddJobCategory(java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobCategories@49c6c24f]">verifyAddJobCategory</td> 
-  <td>main@822087264</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/13 08:44:25</td>   <td>34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobCategories.verifyAddJobCategory(java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobCategories@49c6c24f]">verifyAddJobCategory</td> 
-  <td>main@822087264</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/13 08:44:25</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobCategories.verifyAddJobCategory(java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobCategories@49c6c24f]">verifyAddJobCategory</td> 
-  <td>main@822087264</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/13 08:44:25</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobCategories.verifyAddJobCategory(java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobCategories@49c6c24f]">verifyAddJobCategory</td> 
-  <td>main@822087264</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/07/13 08:44:25</td>   <td>44</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyJobCategories.verifyAddJobCategory(java.lang.String)[pri:0, instance:com.maven.testng.VerifyJobCategories@49c6c24f]">verifyAddJobCategory</td> 
-  <td>main@822087264</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/15 20:34:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TempClass.test(java.lang.String)[pri:0, instance:com.maven.testng.TempClass@233fe9b6]">test</td> 
+  <td>main@776700275</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/15 20:34:40</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TempClass.test(java.lang.String)[pri:0, instance:com.maven.testng.TempClass@233fe9b6]">test</td> 
+  <td>main@776700275</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/15 20:34:40</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TempClass.test(java.lang.String)[pri:0, instance:com.maven.testng.TempClass@233fe9b6]">test</td> 
+  <td>main@776700275</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/15 20:34:40</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TempClass.test(java.lang.String)[pri:0, instance:com.maven.testng.TempClass@233fe9b6]">test</td> 
+  <td>main@776700275</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/15 20:34:40</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TempClass.test(java.lang.String)[pri:0, instance:com.maven.testng.TempClass@233fe9b6]">test</td> 
+  <td>main@776700275</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/07/15 20:34:40</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TempClass.test(java.lang.String)[pri:0, instance:com.maven.testng.TempClass@233fe9b6]">test</td> 
+  <td>main@776700275</td>   <td></td> </tr>
 </table>
