--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,8 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>Test Job Category 01</td></tr>
-<tr><td>Test Job Category 02</td></tr>
-<tr><td>Test Job Category 03</td></tr>
-<tr><td>Test Job Category 04</td></tr>
-<tr><td>Test Job Category 05</td></tr>
-<tr><td>Test Job Category 06</td></tr>
-<tr><td>Test Job Category 07</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
